--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
     государственными органами, содействие научным изысканиям в сфере аутизма, 
     защита прав.
 
-# slides:
-# 	- image: slide01.jpg
-#       text: Мы хотим, чтобы дети с аутизмом – наши дети, дети других родителей – обрели свое достойное место в нашем обществе, чтобы общество научилось понимать и принимать детей и взрослых с аутизмом, а аутисты научились понимать и принимать наше общество в той степени, в какой для каждого из них это возможно.
-# 	- image: slide02.jpg
-#       text: Мы хотим, чтобы дети с аутизмом – наши дети, дети других родителей – обрели свое достойное место в нашем обществе, чтобы общество научилось понимать и принимать детей и взрослых с аутизмом, а аутисты научились понимать и принимать наше общество в той степени, в какой для каждого из них это возможно.
-
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: /contact-autism-website
 url:  "" #"http://yourdomain.com" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 #github_username:  jekyll
